--- a/.github/workflows/deploy-to-kubernetes.yml
+++ b/.github/workflows/deploy-to-kubernetes.yml
@@ -1,8 +1,10 @@
 name: Deploy to Kubernetes via SSH
 
 on:
-  create:
-    types: [ tag ]
+  push:
+    # Запускать этот воркфлоу только при создании тегов
+    tags:
+      - 'v*.*.*'
 
 jobs:
   deploy-to-k8s:
