--- a/.github/workflows/deploy-to-kubernetes.yml
+++ b/.github/workflows/deploy-to-kubernetes.yml
@@ -2,11 +2,41 @@ name: Deploy to Kubernetes via SSH
 
 on:
   push:
-    # Запускать этот воркфлоу только при создании тегов
     tags:
       - 'v*.*.*'
 
 jobs:
+  build-and-push-image:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Get Tag Name
+        run: echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            reocoker/nginx-diplom:${{ env.TAG_NAME }}
+            reocoker/nginx-diplom:latest
   deploy-to-k8s:
     runs-on: ubuntu-latest
     
